--- a/style.css
+++ b/style.css
@@ -89,7 +89,7 @@ header h1 { font-size: 1.5rem; }
    width: 100%;
    height: 100px;
    margin: 1rem auto;
-   padding: 2rem 10%;
+   padding: 2rem 0;
    background: rgba(0, 0, 0, 0.425);
    color: rgba(255, 255, 255, 0.965);
    text-align: right;
@@ -98,6 +98,28 @@ header h1 { font-size: 1.5rem; }
    line-height: 40px;
    border-radius: 7px;
 }
+
+#result div {
+   width: 80%;
+   margin: auto;
+   overflow-y: hidden;
+}
+
+#result div::-webkit-scrollbar {
+   width: auto;
+   height: 2px;
+}
+
+#result div::-webkit-scrollbar-track {
+   background: rgba(0, 0, 0, 0.185);
+}
+
+#result div::-webkit-scrollbar-thumb {
+   background-color: rgba(231, 231, 231, 0.123);    /* color of the scroll thumb */
+   border-radius: 10px;       /* roundness of the scroll thumb */
+}
+
+#result p:focus { outline: none; }
 
 #calculator {
    display: flex;
@@ -161,6 +183,7 @@ header h1 { font-size: 1.5rem; }
 .attribution {
    font-size: 1rem;
    text-align: center;
+   margin-top: 5%;
 }
 
 .attribution p {
